<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/order_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/label_hello"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/order_text_pseudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="Anonyme"
            android:textSize="24sp" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/label_coffees_quantities"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_order_coffees_quantities_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="-"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_text_coffees_quantities"
            android:layout_width="89dp"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="0"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_order_coffees_quantities_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="+"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_text_sum_coffees"
            android:layout_width="89dp"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="0"
            android:textSize="18sp" />

        <TextView
            android:layout_width="43dp"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="@string/label_currency"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/wrapper_checkbox_chantilly_for_coffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_chantilly_for_coffee"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkbox_order_chantilly_for_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wrapper_order_chantilly_for_coffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_order_quantity_chantilly_for_coffee_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="-"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_text_quantity_chantilly_for_coffee"
            android:layout_width="89dp"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="0"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_order_quantity_chantilly_for_coffee_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="+"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_text_sum_chantilly_for_coffee"
            android:layout_width="89dp"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="0"
            android:textSize="18sp" />

        <TextView
            android:layout_width="43dp"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="@string/label_currency"
            android:textSize="18sp" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/label_chocolates_quantities"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_order_chocolates_quantities_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="-"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_text_chocolates_quantities"
            android:layout_width="89dp"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="0"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_order_chocolates_quantities_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="+"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_text_sum_chocolates"
            android:layout_width="89dp"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="0"
            android:textSize="18sp" />

        <TextView
            android:layout_width="43dp"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="@string/label_currency"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/wrapper_checkbox_chantilly_for_chocolate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_chantilly_for_chocolate"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkbox_order_chantilly_for_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/wrapper_order_chantilly_for_chocolate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_order_quantity_chantilly_for_chocolate_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="-"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_text_quantity_chantilly_for_chocolate"
            android:layout_width="89dp"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="0"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_order_quantity_chantilly_for_chocolate_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="+"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_text_sum_chantilly_for_chocolate"
            android:layout_width="89dp"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="0"
            android:textSize="18sp" />

        <TextView
            android:layout_width="43dp"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="@string/label_currency"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/label_sum_order"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/order_text_sum_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="25dp"
            android:text="0"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/label_currency"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="8dp"
            android:text="@string/btn_order"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>

